# mcub-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
config/sudoers.d/: mcub-rust
docs/: PROTOCOL.md  REPORT.md  compare-c-vs-rust.md
services/: watcher.service
shared/: settings.json
src/: error.rs  lib.rs
src/core/: action_runner.rs  cava_manager.rs  config_manager.rs  device_identifier.rs  logger.rs  mod.rs  mpd_client.rs  reconnection.rs  serial_comm.rs  serial_queue.rs  signal_handler.rs
src/modules/: cava_bridge.rs  display_bridge.rs  hybrid_bridge.rs  mod.rs  mpd_bridge.rs  sysinfo_bridge.rs
