[package]
name = "mcub"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
description = "Rust port of mcub-c — MPD CAVA UART Bridge"
repository = "https://github.com/thestreamdigger/mcub-rust"
readme = "README.md"

[lib]
name = "mcub"
path = "src/lib.rs"

[[bin]]
name = "mcub-bridge-rust"
path = "src/bin/bridge.rs"

[[bin]]
name = "mcub-watcher-rust"
path = "src/bin/watcher.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
nix = { version = "0.29", features = ["fs", "poll", "signal", "term", "ioctl", "socket", "net"] }
udev = "0.9"
glob = "0.3"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
